# battlecar

./: .gitignore  Makefile.am  README.md  configure.ac
battleserver/: Makefile.am  battleserver  battleserver.cpp  bs.conf  cregisterclientreq.hpp  sregisterclientrep.hpp
pb/: netmessage.pb.cc  netmessage.pb.h
pbdef/: netmessage.proto
